After 1.5.0beta

  New Features

    - Feature

  Bugs Fixed

    - Workflow: Removed deprecated WorkflowMethod machinery.