@@ -6,4 +6,8 @@ After 1.5.0beta
 
   Bugs Fixed
 
+    - ActionsTool: Removed deprecated support for oldstyle Action Providers.
+      If Action Providers don't implement the ActionProvider interface they
+      are now ignored.
+
     - Workflow: Removed deprecated WorkflowMethod machinery.
